# the-nose

./: README.md  install-db.yml  install.yml  measure.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
examples/inventory/: hosts
examples/inventory/host_vars/: nose1.yml
files/: thenose.service
templates/: config.yaml.j2  thenose.service.j2
